# ros_nn

./: CMakeLists.txt  README.md  package.xml
src/: pytorch_frontend_tuto.cpp  pytorch_test.cpp
